[Fix] -> Body font size top spacing issue.

--- a/inc/customizer/custom-controls/responsive/responsive.scss
+++ b/inc/customizer/custom-controls/responsive/responsive.scss
@@ -76,7 +76,8 @@
 			}
 			.ast-responsive-input {
 				width: 100%;
-			} 
+			}
+			display: inline;
 		} 
 	}
 }
